Feature: Added User month summary API